tests/ui/traits/const-traits/const-and-non-const-impl.stderr
error: const `impl` for trait `Add` which is not marked with `#[const_trait]`
  --> $DIR/const-and-non-const-impl.rs:7:12
   |
LL | impl const std::ops::Add for i32 {
   |            ^^^^^^^^^^^^^
   |
   = note: marking a trait with `#[const_trait]` ensures all default method bodies are `const`
   = note: adding a non-const method body in the future would be a breaking change

error: const `impl` for trait `Add` which is not marked with `#[const_trait]`
  --> $DIR/const-and-non-const-impl.rs:23:12
   |
LL | impl const std::ops::Add for Int {
   |            ^^^^^^^^^^^^^
   |
   = note: marking a trait with `#[const_trait]` ensures all default method bodies are `const`
   = note: adding a non-const method body in the future would be a breaking change

error[E0119]: conflicting implementations of trait `Add` for type `Int`
  --> $DIR/const-and-non-const-impl.rs:23:1
   |
LL | impl std::ops::Add for Int {
   | -------------------------- first implementation here
...
LL | impl const std::ops::Add for Int {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `Int`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0119`.
